<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>advent-of-code</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/rc-cookie/*</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>http</artifactId>
      <version>0.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>xml</artifactId>
      <version>0.1.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>graph</artifactId>
      <version>0.1.1</version>
    </dependency>
    <dependency>
      <groupId>com.github.rccookie</groupId>
      <artifactId>util</artifactId>
      <version>1.13.0.0</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <!--suppress MavenPackageUpdate -->
      <version>4.1.1</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>htmlunit-driver</artifactId>
      <version>3.60.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.36</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <!--suppress MavenModelInspection -->
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>19</source>
          <target>19</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
